# technicalmethods

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
technicalmethods/: __init__.py  methods.py
