[metadata]
name = technicalmethods

url = https://github.com/GBERESEARCH/technicalmethods

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: technicalmethods.__version__

description = Technical Analysis tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy >= 1.16.2
    pandas >= 1.0.0
    scipy >= 1.7.0

[options.packages.find]
where=src